--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,19 @@
  *= require_tree .
  *= require_self
  */
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
+ .user-info {
+   margin: 9px 9px;
+ }
+ 
+ .nav {
+   margin-top: 5px;
+   background-color: #F7F7F7;
+ }
+
+ .body-color {
+   background-color: #EDEDED;   
+ }
+ 
