Added the app welcome index page and about page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,37 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+  <div class="jumbotron ">
+     <h1><strong>WebAnalytics</strong></h2>
+     <p>Analytics service to track events on websites</p>
+     <p>
+         <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary'  %> or
+         <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary'  %> today!
+     </p>
+   </div>
+ 
+  <div class="row">
+  <div class="col-md-4">
+    <div class="thumbnail">
+      <div class="caption">
+        <h3>Register Apps</h3>
+        <p>Events are registered for analysis</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="thumbnail">
+      <div class="caption">
+        <h3>Dashboard for Apps</h3>
+        <p>Neat dasboard for analysis</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="thumbnail">
+      <div class="caption">
+        <h3>Secure login</h3>
+        <p>Secured login</p>
+      </div>
+    </div>
+  </div>
+</div>
+   
+ 
