--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
   <body class="body-color">
     <div class="container">
-      <ul class="nav nav-tabs">
+      <ul class="nav nav-tabs groove_border">
       <li><%= link_to "Home", welcome_index_path %></li>
       <li><%= link_to "Apps", root_path %></li>
       <li><%= link_to "About", about_path %></li>
@@ -18,16 +18,16 @@
         <% if user_signed_in? %>
            <div class="pull-right">
              <strong><%= current_user.email %></strong>
-             <%= link_to '', edit_user_registration_path, :class => 'navbar-link glyphicon glyphicon-cog' %> Profile   
-             <%= link_to "", destroy_user_session_path, method: :delete, :class => 'navbar-link glyphicon glyphicon-log-out' %> Sign Out
+             <%= link_to '', edit_user_registration_path, :class => 'btn btn-default glyphicon glyphicon-cog ' %>    
+             <%= link_to "", destroy_user_session_path, method: :delete, :class => 'btn btn-default glyphicon glyphicon-log-out' %> 
              <%= link_to (image_tag current_user.avatar_url(38), class: "gravatar"), edit_user_registration_path %>
            </div>
            
         <% end %>
         
         <% if user_signed_in? == false %>           
-           <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> -
-           <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %>
+           <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-default"  %> -
+           <%= link_to "Sign In", new_user_session_path, class: "btn btn-default"  %>
         <% end %>
       </div>
    </ul>
