--- a/app/views/registered_applications/show.html.erb
+++ b/app/views/registered_applications/show.html.erb
@@ -1,5 +1,7 @@
 <div class="row">
-    <div class="col-md-12">
-        <h1>Dashboard for <%= @registered_application.name %> </h1>
-    </div>
+  <div class="col-md-4"></div>    
+    <div class="col-md-8">
+      <h2>Dashboard for <%= @registered_application.name %> </h1>
+    </div>    
+<div class="col-md-4"></div>    
 </div>
