--- a/app/assets/stylesheets/registered_applications.scss
+++ b/app/assets/stylesheets/registered_applications.scss
@@ -2,6 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.col-md-8 button{
+button.button-width{
   width:100%;
 }
