--- a/app/views/registered_applications/index.html.erb
+++ b/app/views/registered_applications/index.html.erb
@@ -15,20 +15,32 @@
   <% end %>
 </div>
 
-<div class="row">
-  <div class="list-group">
-    <% @registered_applications.each do |app| %>
-      <div class="col-md-2">
-        <%= link_to [app] , method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this app' } do %>
-          <i class="glyphicon glyphicon-trash"> </i>
-        <% end %>
-      </div>
-      <div class="col-md-10">
-        <%= button_to "#{app.name}: #{app.url}", {action: "show", id: app.id }, method: :get, class: "list-group-item list-group-item-action", style: "{width: 100%;}" %>
-      </div>
-    <% end %>
-  </div>
-</div>    
+<div class="table-responsive">
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th class="col-md-6">App Name</th>
+        <th class="col-md-6">Action</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @registered_applications.each do |app| %>
+      <tr> 
+        <td class="col-md-6">
+           <%= button_to "#{app.name}: #{app.url}", {action: "show", id: app.id }, method: :get, class: "btn-group btn-group-justified btn btn-default" %>            
+        </td>
+        <td class="col-md-6">
+          <%= link_to [app] , method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this app' } do %>
+            <i class="glyphicon glyphicon-trash"> </i>
+          <% end %>
+        </td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
+
+
     
     
 
