--- a/app/views/registered_applications/show.html.erb
+++ b/app/views/registered_applications/show.html.erb
@@ -16,9 +16,9 @@
     </thead>
     <tbody>
       <tr> 
-        <% @events.each do |event| %>
-          <td class="col-md-8"><%= event.name %></td>
-          <td class="col-md-4"></td>
+        <% @events.each do |event, count| %>
+          <td><%= event %></td>
+          <td><%= count.length %></td>
         <% end %>
       </tr>
     </tbody>
