Completed the checkpoint

--- a/app/views/registered_applications/show.html.erb
+++ b/app/views/registered_applications/show.html.erb
@@ -10,15 +10,17 @@
   <table class="table table-hover">
     <thead>
       <tr>
-        <th class="col-md-8">Event Name</th>
-        <th class="col-md-4">Event Count</th>
+        <th class="col-md-4">Event Name</th>
+        <th class="col-md-4">Event Pie Chart</th>
+        <th class="col-md-4">Event Line Chart</th>
       </tr>
     </thead>
     <tbody>
       <tr> 
         <% @events.each do |event, count| %>
           <td><%= event %></td>
-          <td><%= count.length %></td>
+          <td><%= pie_chart @registered_application.events.group(:name).count %></td>
+          <td><%= line_chart @registered_application.events.group_by_day(:created_at).count %></td>
         <% end %>
       </tr>
     </tbody>
