Corrected the graph name

--- a/app/views/registered_applications/show.html.erb
+++ b/app/views/registered_applications/show.html.erb
@@ -11,8 +11,8 @@
     <thead>
       <tr>
         <th class="col-md-2">Event Name</th>
-        <th class="col-md-5">Event Pie Chart</th>
         <th class="col-md-5">Event Line Chart</th>
+        <th class="col-md-5">Event Column Chart</th>
       </tr>
     </thead>
     <tbody>
